z-index fix for placeholder, removal of deprecated redactor code

--- a/elements/upfront-newnavigation/css/unewnavigation-editor.css
+++ b/elements/upfront-newnavigation/css/unewnavigation-editor.css
@@ -133,7 +133,6 @@ div.upfront-navigation.upfront-editable_entity ul.time_being_display {
 div.upfront-navigation.upfront-editable_entity a.menu_item.menu_item_placeholder {
 	min-width: 92px;
 }
-
 div.upfront-navigation.upfront-editable_entity  div.existing_menu_list ul li:before, div.upfront-navigation.upfront-editable_entity  div.existing_menu_list li label:before {
 	display: none !important;
 }
@@ -289,7 +288,7 @@ input#unavigation-link-type-3 {
 }
 
 
-div.upfront-output-unewnavigation .menu_item_placeholder.ueditor-placeholder {
+div.upfront-output-unewnavigation .ueditor-placeholder {
 	z-index:1 !important;	
 }
 
